# smoothscraper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml  shell.nix
.github/workflows/: ci.yml
deploy/: smoothscraper.service
src/: config.rs  main.rs  target.rs  ui.rs
src/fetcher/: funding.rs  long_short.rs  mod.rs  ohlcv.rs  oi.rs  premium.rs  retry.rs  taker.rs
src/store/: csv.rs  health.rs  log.rs  manifest.rs  mod.rs  schema.rs  state.rs
