[package]
name = "smoothscraper"
version = "0.1.0"
edition = "2021"
description = "Elastic, gentle, relentless market data scraper"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
rand = "0.8"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
tower = "0.4"
